--- a/jwbc/src/main/resources/org/gafner/jwbc/jwbc.fxml
+++ b/jwbc/src/main/resources/org/gafner/jwbc/jwbc.fxml
@@ -37,6 +37,11 @@
                                         <KeyCodeCombination alt="UP" code="O" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
                                     </accelerator>
                                 </MenuItem>
+                        <MenuItem fx:id="saveButtonMenu" mnemonicParsing="false" onAction="#save" text="Save">
+                           <accelerator>
+                              <KeyCodeCombination alt="UP" code="S" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
+                           </accelerator>
+                        </MenuItem>
                                 <MenuItem mnemonicParsing="false" onAction="#close" text="Close" />
                             </items>
                         </Menu>
@@ -54,11 +59,11 @@
                 </MenuBar>
                 <HBox fillHeight="false" maxHeight="35.0" maxWidth="1.7976931348623157E308" prefHeight="35.0" spacing="6.0" style="-fx-border-color: #757575;" VBox.vgrow="NEVER">
                     <children>
-                        <HBox minWidth="-Infinity" prefHeight="27.0" prefWidth="40.0" />
+                        <HBox minWidth="-Infinity" prefHeight="27.0" prefWidth="21.0" />
                         <Button id="save" fx:id="saveButton" contentDisplay="GRAPHIC_ONLY" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#save" prefHeight="65.0" prefWidth="40.0" />
                         <Button id="undo" fx:id="undoButton" contentDisplay="GRAPHIC_ONLY" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#undo" prefHeight="65.0" prefWidth="40.0" />
                         <Button id="redo" fx:id="redoButton" contentDisplay="GRAPHIC_ONLY" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#redo" prefHeight="65.0" prefWidth="40.0" />
-                        <HBox minWidth="-Infinity" prefHeight="27.0" prefWidth="0.0" HBox.hgrow="ALWAYS" />
+                        <HBox minWidth="-Infinity" prefHeight="27.0" prefWidth="21.0" HBox.hgrow="ALWAYS" />
                         <ToggleButton id="editButton" fx:id="editButton" contentDisplay="GRAPHIC_ONLY" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="65.0" prefWidth="40.0" selected="true" toggleGroup="$toggleDrawGroup">
 
                             <tooltip>
@@ -80,15 +85,26 @@
                                 <ImageView id="eraserButton" pickOnBounds="true" preserveRatio="true" />
                             </graphic>
                         </ToggleButton>
+                        <ToggleButton id="textButton" fx:id="textButton" contentDisplay="GRAPHIC_ONLY" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="65.0" prefWidth="40.0" toggleGroup="$toggleDrawGroup">
+                            <toggleGroup>
+                                <ToggleGroup fx:id="toggleDrawGroup1" />
+                            </toggleGroup>
+                            <tooltip>
+                                <Tooltip text="Erase" />
+                            </tooltip>
+                            <graphic>
+                                <ImageView id="eraserButton" pickOnBounds="true" preserveRatio="true" />
+                            </graphic>
+                        </ToggleButton>
                         <ToggleButton id="lineButton" fx:id="lineButton" contentDisplay="GRAPHIC_ONLY" mnemonicParsing="false" prefHeight="65.0" prefWidth="40.0" toggleGroup="$toggleDrawGroup" />
                         <ToggleButton id="rectangleButton" fx:id="rectangleButton" contentDisplay="GRAPHIC_ONLY" mnemonicParsing="false" prefHeight="65.0" prefWidth="40.0" toggleGroup="$toggleDrawGroup" />
                         <ToggleButton id="circle" fx:id="circleButton" contentDisplay="GRAPHIC_ONLY" mnemonicParsing="false" prefHeight="65.0" prefWidth="40.0" toggleGroup="$toggleDrawGroup" />
-                        <ComboBox fx:id="comboBoxLineThickens" prefHeight="65.0" prefWidth="50.0" />
-                        <Label prefHeight="29.0" prefWidth="52.0" text="Stroke:" textAlignment="RIGHT" />
+                        <ComboBox fx:id="comboBoxLineThickens" prefHeight="29.0" prefWidth="40.0" />
+                        <Label prefHeight="29.0" prefWidth="49.0" text="Stroke:" textAlignment="RIGHT" />
                         <ColorPicker fx:id="colorPicker" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="65.0" prefWidth="50.0" />
                         <Label prefHeight="29.0" prefWidth="28.0" text="Fill:" />
                         <ColorPicker fx:id="colorPickerFill" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="65.0" prefWidth="50.0" />
-                        <HBox minWidth="-Infinity" prefHeight="27.0" prefWidth="17.0" HBox.hgrow="ALWAYS" />
+                        <HBox minWidth="-Infinity" prefHeight="27.0" prefWidth="12.0" HBox.hgrow="ALWAYS" />
                         <Button id="zoomIn" fx:id="zoomIn" contentDisplay="GRAPHIC_ONLY" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#zoomIn" prefHeight="65.0" prefWidth="40.0" />
                         <Button id="zoomOut" fx:id="zoomOut" contentDisplay="GRAPHIC_ONLY" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#zoomOut" prefHeight="65.0" prefWidth="40.0" />
                         <HBox minWidth="-Infinity" prefHeight="27.0" prefWidth="24.0" HBox.hgrow="ALWAYS" />
@@ -100,7 +116,12 @@
                         <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
                     </padding>
                 </HBox>
-            <StackPane fx:id="canvasContainer" prefHeight="150.0" prefWidth="200.0" VBox.vgrow="ALWAYS" />
+                <HBox prefHeight="100.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+                    <children>
+                        <VBox prefHeight="537.0" prefWidth="149.0" />
+                        <StackPane fx:id="canvasContainer" prefHeight="150.0" prefWidth="200.0" style="-fx-background-color: dcdcdc;" HBox.hgrow="ALWAYS" />
+                    </children>
+                </HBox>
             </children>
         </VBox>
     </children>
