--- a/jwbclient/src/main/resources/fxml/jwbc-canvas.fxml
+++ b/jwbclient/src/main/resources/fxml/jwbc-canvas.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 
-<BorderPane fx:id="borderPane" prefHeight="600.0" prefWidth="600.0" stylesheets="@jwbc-style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.gafner.jwb.api.CanvasController">
+<BorderPane fx:id="borderPane" prefHeight="600.0" prefWidth="600.0" stylesheets="@jwbc-style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.gafner.jwb.client.CanvasController">
    <center>
          <StackPane fx:id="stackPane" style="-fx-background-insets: 20 , 20; -fx-padding: 20; -fx-border-insets: 2px;" stylesheets="@jwbc-style.css" BorderPane.alignment="CENTER">
          <StackPane fx:id="canvasPaneHolder" maxHeight="500.0" maxWidth="500.0" minHeight="500.0" minWidth="500.0" prefHeight="500.0" prefWidth="500.0" style="-fx-background-color: antiquewhite; -fx-background-color: white; -fx-border-color: black;">
